--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-SOME_ENV_VARIABLE=HiThere
+DATABASE=postgres
+DATABASE_USER=postgres
+DATABASE_PASSWORD=admin
+SECRET=wr3r23fwfwefwekwself.2456342.dawqdq
