--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
-    "test": "echo \"No test specified\" && exit 0"
+    "test-server": "TEST_DATABASE=mytestdatabase npm start",
+    "test": "mocha --require @babel/register 'src/**/*.spec.js'"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,22 @@
     "nodemon": "^1.18.9"
   },
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "@babel/register": "^7.12.10",
+    "apollo-server-express": "^2.19.2",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
+    "chai": "^4.2.0",
+    "cors": "^2.8.5",
+    "dataloader": "^2.0.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "graphql": "^15.4.0",
+    "graphql-iso-date": "^3.6.1",
+    "graphql-resolvers": "^0.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.2.1",
+    "pg": "^8.5.1",
+    "sequelize": "^6.4.0",
+    "uuid": "^8.3.2"
   }
 }
